Brain-BT/force-app/main/default/objects/Product2/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Model 8000</fullName>
            </value>
            <value>
                <fullName>Genie</fullName>
            </value>
            <value>
                <fullName>Model 8300</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>