Brain-BT/force-app/main/default/objects/Product2/fields/BT_COLOR__c.field-meta.xml
<CustomField>
    <fullName>BT_COLOR__c</fullName>
    <label>BT Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>White</fullName>
            </value>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>