Brain-BT/force-app/main/default/objects/Product2/fields/Default_Slab_For_Org__c.field-meta.xml
<CustomField>
    <fullName>Default_Slab_For_Org__c</fullName>
    <label>Default Slab For Org</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TRUE</fullName>
            </value>
            <value>
                <fullName>FALSE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>