Brain-BT/force-app/main/default/objects/Product2/fields/Finish__c.field-meta.xml
<CustomField>
    <fullName>Finish__c</fullName>
    <label>Finish</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NICKLE</fullName>
            </value>
            <value>
                <fullName>BRONZE</fullName>
            </value>
            <value>
                <fullName>GRAPHITE</fullName>
            </value>
            <value>
                <fullName>BLACK</fullName>
            </value>
            <value>
                <fullName>STANDARD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>