Brain-BT/force-app/main/default/objects/Product2/fields/Glass__c.field-meta.xml
<CustomField>
    <fullName>Glass__c</fullName>
    <label>Glass</label>
    <length>255</length>
    <type>Text</type>
</CustomField>