Brain-BT/force-app/main/default/objects/Product2/fields/Handing__c.field-meta.xml
<CustomField>
    <fullName>Handing__c</fullName>
    <label>Handing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Left</fullName>
            </value>
            <value>
                <fullName>Right</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Diverter Bath Spout</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>