Brain-BT/force-app/main/default/objects/Product2/fields/Lock__c.field-meta.xml
<CustomField>
    <fullName>Lock__c</fullName>
    <label>Lock</label>
    <length>255</length>
    <type>Text</type>
</CustomField>