Brain-BT/force-app/main/default/objects/Product2/fields/Nail_Finish__c.field-meta.xml
<CustomField>
    <fullName>Nail_Finish__c</fullName>
    <label>Nail Finish</label>
    <length>255</length>
    <type>Text</type>
</CustomField>