Brain-BT/force-app/main/default/objects/Product2/fields/Selection_Category__c.field-meta.xml
<CustomField>
    <fullName>Selection_Category__c</fullName>
    <label>Selection Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Upgrade</fullName>
            </value>
            <value>
                <fullName>New</fullName>
                <isActive>false</isActive>
                <label>New</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>