Brain-BT/force-app/main/default/objects/Product2/fields/Sub_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Sub_Product_Code__c</fullName>
    <label>Sub Product Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stockton 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>