Brain-BT/force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Trade_Type__c</columns>
    <columns>Category__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Manufacturer__c</columns>
    <columns>PRODUCT2.SKU</columns>
    <columns>Vendor__c</columns>
    <columns>Selection_Category__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
</ListView>