Brain-BT/force-app/main/default/objects/Product2/listViews/Plumbing_Products.listView-meta.xml
<ListView>
    <fullName>Plumbing_Products</fullName>
    <columns>Category__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>Product_Type__c</columns>
    <columns>Selection_Category__c</columns>
    <columns>PRODUCT2.SKU</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Plumbing</value>
    </filters>
    <label>Plumbing Products</label>
</ListView>