Brain-BT/force-app/main/default/objects/Product2/listViews/Window_Producst.listView-meta.xml
<ListView>
    <fullName>Window_Producst</fullName>
    <columns>Selection_Category__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Cost_Code__c</columns>
    <columns>Manufacturer__c</columns>
    <columns>Finish__c</columns>
    <columns>Glass__c</columns>
    <columns>PRODUCT2.SKU</columns>
    <columns>Series__c</columns>
    <columns>Size__c</columns>
    <columns>Tempered__c</columns>
    <columns>Vendor__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Windows &amp; Doors</value>
    </filters>
    <label>Window Products</label>
</ListView>